# scorep_plugin_cpuidle

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  scorep_cpuidle_plugin.cpp
include/scorep/plugin/: plugin.hpp
include/scorep/plugin/policy/: fwd.hpp
